--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>RELEASE</version>
+            <version>1.18.20</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -186,16 +186,23 @@
             <version>4.1.67.Final</version>
         </dependency>
         <!-- 爬虫 -->
-        <dependency>
-            <groupId>com.geccocrawler</groupId>
-            <artifactId>gecco</artifactId>
-            <version>1.3.21</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.4</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.geccocrawler</groupId>-->
+<!--            <artifactId>gecco</artifactId>-->
+<!--            <version>1.3.21</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>commons-fileupload</groupId>-->
+<!--            <artifactId>commons-fileupload</artifactId>-->
+<!--            <version>1.4</version>-->
+<!--        </dependency>-->
+        <!-- 对象头分析工具 -->
+<!--        <dependency>-->
+<!--            <groupId>org.openjdk.jol</groupId>-->
+<!--            <artifactId>jol-core</artifactId>-->
+<!--            <version>0.10</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
     <build>
